layout updated, blog feature added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,23 +9,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustResize">
             >
 
+        </activity>
+        <activity android:name=".LoginActivity" />
+        <activity
+            android:name=".BlogPostActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme3" />
+        <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-        </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".BlogPostActivity"
-            android:theme="@style/AppTheme3"
-            android:screenOrientation="portrait">
-
         </activity>
     </application>
 
