--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,18 +17,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    packagingOptions {
+        exclude 'META-INF/ASL2.0.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
 }
 
 
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.google.firebase:firebase-storage:9.4.0'
@@ -38,14 +44,14 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.appyvet:materialrangebar:1.3'
     compile 'com.fmsirvent:parallaxeverywhere:1.0.4'
-
     compile 'com.firebaseui:firebase-ui-auth:0.5.3'
-
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.borax12.materialdaterangepicker:library:1.7'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.sackcentury:shinebutton:0.1.6'
-
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.appyvet:materialrangebar:1.3'
+    testCompile 'junit:junit:4.12'
 }
 
 apply plugin: 'com.google.gms.google-services'
